style: fix Tree icon align bug (#32822)

--- a/components/tree/style/mixin.less
+++ b/components/tree/style/mixin.less
@@ -292,7 +292,8 @@
       background: @component-background;
 
       &-line-icon {
-        vertical-align: -0.225em;
+        // https://github.com/ant-design/ant-design/issues/32813
+        vertical-align: -0.15em;
       }
     }
   }
